Fix spacer being hard to see

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -23,7 +23,7 @@
     --md-default-fg-color--light: white;
 
     /* set color of header in side navbar */
-    --md-default-fg-color--lightest: black;
+    /*--md-default-fg-color--lightest: black;*/
 }
 
 .md-typeset .tabbed-labels > label
